live experience landing page fixes

--- a/portal/templates/gil/lived-experience.html
+++ b/portal/templates/gil/lived-experience.html
@@ -6,6 +6,9 @@
         <div class="page-intro__content">
           <div class="accent-heading accent-heading--white">Objective N<em>o</em>1: LIVED EXPERIENCE</div>
           <p class="page-intro__sub">TrueNTH brings lived experiences from men, their caregivers and clinicians to help you in your prostate cancer journey.</p>
+          <!-- <div class="button-callout"><strong class="js-scroll-down" data-target=".page-intro">Learn More</strong>
+            <figure class="js-scroll-down" data-target=".page-intro"></figure>
+          </div> -->
         </div>
       </div>
       <div class="module-wrap module-wrap--background module-wrap--background__alonzo">
