--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -6231,10 +6231,12 @@ figure.nav-overlay {
     .accent-heading {
         font-size: 14px;
         letter-spacing: 2px;
+        padding: 2em;
     }
     .module__heading {
-        font-size: 28px;
+        font-size: 1.8em;
         line-height: 40px;
+        margin: 0 0.2em;
     }
 }
 [class*='theme-brown'] .module__heading--accent {
@@ -6261,8 +6263,9 @@ figure.nav-overlay {
         font-size: 24px;
     }
     .module__body {
-        font-size: 20px;
+        font-size: 22px;
         line-height: 28px;
+        margin: 1em;
     }
 }
 .module__form {
@@ -6566,11 +6569,11 @@ figure.nav-overlay {
 .module-wrap--story .accent-heading:after {
     background-color: #A9B2B7;
 }
-@media (min-width: 833px) {
+/*@media (min-width: 833px) {
     .module-wrap--story .module__body {
         padding: 0 35px 0 30px;
     }
-}
+}*/
 .story-title {
     color: black;
     font-size: 22px;
@@ -6601,10 +6604,21 @@ figure.nav-overlay {
 
 }
 .page-intro--lived-experience {
-    padding-top: 140px;
-    margin-top: -140px;
+    padding-top: 120px;
+    margin-top: -120px;
     background-position: 75% top;
     transition: background-position 150ms ease-out;
+}
+
+
+@media (min-width: 900px) {
+    .page-intro--lived-experience .page-intro__content {
+        min-height: 448px;
+        padding-top: 240px;
+    }
+}
+.page-intro--lived-experience .button-callout {
+    visibility: hidden;
 }
 .module-wrap--background,
 .module-wrap--background__center,
@@ -6630,14 +6644,14 @@ figure.nav-overlay {
 }
 .module-wrap--background__alonzo {
     background-image: url("../img/LE_Alonzo_McCann.jpg");
-    background-position: 65%;
+    background-position: 68%;
     transition: background-position 200ms ease-in-out;
 }
-@media (min-width: 1100px) {
+/*@media (min-width: 700px) {
     .module-wrap--background__alonzo {
         background-position: center center;
     }
-}
+}*/
 /*@media (min-width: 992px) {
     .module-wrap--background__alonzo {
         background-image: url("../img/LE_Alonzo_McCann.jpg");
@@ -6655,8 +6669,13 @@ figure.nav-overlay {
 }*/
 .module-wrap--background__twins {
     background-image: url("../img/LE_Hirsch_Brothers_Tablet.jpg");
-    background-position: 75%;
+    /*background-position: 65%;*/
     transition: background-position 200ms ease-in-out;
+}
+@media (min-width: 767px) {
+    .module-wrap--background__twins {
+        background-position: 62%;
+    }
 }
 @media (min-width: 1300px) {
     .module-wrap--background__twins {
@@ -6665,7 +6684,7 @@ figure.nav-overlay {
     }
 }
 .module-wrap--background .module__head {
-    font-size: 2.3em;
+    font-size: 2em;
 }
 
 @media (min-width: 1600px) {
@@ -6688,9 +6707,14 @@ figure.nav-overlay {
     }
 }
 .module-wrap--background .module__body {
-    padding: 2% 5%;
+    padding: 2% 10%;
     min-height: 100px;
     transition: padding 150ms ease-out;
+}
+@media (min-width: 767px) {
+    .module-wrap--background .module__body {
+        padding: 6% 18%;
+    }
 }
 @media (min-width: 851px) {
     .module-wrap--background .module__body {
@@ -6702,15 +6726,15 @@ figure.nav-overlay {
         line-height: 1.4em;
     }
 }
-@media (min-width: 1100px) {
+@media (min-width: 1200px) {
     .module-wrap--background .module__body {
         padding: 2% 15%;
     }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1300px) {
     .module-wrap--background .module__body {
-        padding: 1% 11%;
+        padding: 1% 7%;
     }
 }
 
@@ -6722,7 +6746,7 @@ figure.nav-overlay {
 .module-wrap--background .module--shift__right,
 .module-wrap--background .module--shift__left {
     z-index: 2;
-    padding: 3% 1%;
+    padding: 4% 1%;
     transition: padding 150ms ease-in;
 }
 
@@ -6739,7 +6763,8 @@ figure.nav-overlay {
         margin: 0 0.5em;
     }
 }
-@media (max-width: 851px) {
+/*@media (max-width: 851px) {*/
+@media (max-width: 767px) {
     main .module-wrap--background {
         background: #5d5a55;
         background-image: none !important;
@@ -6750,10 +6775,10 @@ figure.nav-overlay {
     }
     img.mobile {
         display: block;
-        width: 350px;
+        width: 450px;
         max-width: 100%;
         margin: 0 auto 1.5em auto;
-        padding: 1em 0;
+        padding: 1em 1.5em;
     }
     .module-wrap--background .module {
         padding: 8% 2%;
@@ -6763,6 +6788,7 @@ figure.nav-overlay {
     .module-wrap--background .module__heading {
         padding-left: 10px;
         padding-right: 10px;
+        padding-bottom: 1em;
     }
     .module-wrap--background .button--brown {
         margin: 0 20px;
@@ -6774,14 +6800,15 @@ aside .module-wrap--background {
     background-position: center;
     transition: background-position 150ms ease-in;
 }
+
 @media (min-width: 550px) {
-    aside .module-wrap--background {
+    aside .module-wrap--background .module{
         padding-top: 8%;
     }
 }
 @media (min-width: 992px) {
     aside .module-wrap--background {
-        padding-top: 6%;
+        padding-top: 2%;
     }
 }
 aside .module--flex {
@@ -6871,7 +6898,7 @@ aside .module--flex {
     width: 200px;
     max-width: 100%;
     top: 43%;
-    height: 2.5em;
+    height: 3em;
     font-size: 0.65em;
     border: 0;
     letter-spacing: 2px;
