--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -84,8 +84,9 @@ a:focus {
 .btn-tnth-primary.active,
 .open > .dropdown-toggle.btn-tnth-primary {
   color: #fff;
-  background-color: #5f676e;
-  border-color: #5f676e;
+  background-color: #909698;
+  border-color: #909698;
+  text-decoration: none;
 }
 .btn-tnth-primary .glyphicon {
   color: #FFF;
@@ -96,7 +97,7 @@ a {
 }
 a:hover,
 a:active {
-  color: #60654f;
+  color: #909698;
 }
 a.disabled {
   opacity: 0.6;
@@ -173,7 +174,7 @@ select:not([multiple]) {
 .feature-btn-primary:hover,
 .feature-btn-primary:active {
   color: #FFF;
-  background-color: #000;
+  background-color: #909698;
 }
 .button--LR,
 .button--LR.data-show,
@@ -251,12 +252,6 @@ select:not([multiple]) {
 #mainDiv.profile #profileHeader * {
   color: #FFF;
   letter-spacing: 1px;
-}
-#mainDiv.profile #bdGroup {
-  margin-bottom: 0.2em;
-}
-#mainDiv.profile #profileStudyIDContainer {
-  margin-bottom: 2em;
 }
 #mainDiv.profile .copyright-container *,
 #mainDiv.profile .logo-container * {
@@ -338,7 +333,7 @@ select:not([multiple]) {
   cursor: pointer;
 }
 #stickyMenu li:hover {
-  color: #60654f;
+  color: #909698;
   transform: scale(1.05);
 }
 a.open,
@@ -357,7 +352,7 @@ a.open {
   color: #2a4531;
 }*/
 a.back:hover {
-  color: #60654f;
+  color: #909698;
 }
 a.open .glyphicon, a.back .glyphicon {
   font-size: 1.2em;
@@ -712,8 +707,8 @@ div.right-panel {
 }
 .access-button:hover {
   color: #fff;
-  background-color: #2a4531;
-  border-color: #1c2f21;
+  background-color: #909698;
+  border-color: #909698;
 }
 #accessCodeWrapper {
   margin: 0 auto;
@@ -827,7 +822,7 @@ div.right-panel {
   top: 2px;
 }
 #indexNavBar span:hover {
-  color: #60654f;
+  color: #909698;
   cursor: pointer;
 }
 #indexNavBar #backLink {
@@ -1086,8 +1081,8 @@ div.right-panel {
 }
 #mainDiv.portal {
   background: rgba(95, 103, 110, 1);
-  height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 #mainDiv.portal .container {
   max-width: 1100px;
@@ -1096,9 +1091,7 @@ div.right-panel {
   color: #FFF;
 }
 .portal-item {
- /* margin: 5em 0;
-  padding: 1em 3em 3em 3em;*/
- margin: 4em auto 2em auto;
+ margin: 3em auto 2em auto;
  min-height: 60vh;
 }
 .portal-no-description-container {
@@ -1146,8 +1139,13 @@ div.right-panel {
   letter-spacing: 0.5px;
 }
 .portal-header {
-  font-size: 1.4em;
+  font-size: 1.2em;
   letter-spacing: 1px;
+}
+@media (min-width: 726px) {
+  .portal-header {
+    font-size: 1.4em;
+  }
 }
 .portal-intro-text {
   font-size: 1.1em;
@@ -1158,7 +1156,7 @@ div.right-panel {
   }
 }
 .portal-header-logout-container {
-  width: 300px;
+  width: 100%;
   max-width: 100%;
   margin: 2em auto;
   text-align: center;
@@ -1183,7 +1181,7 @@ div.right-panel {
   color: #FFF;
   padding: 2em 2em 4em 2em;
   position: relative;
-  width: 450px;
+  width: 430px;
   max-width: 100%;
   margin: 1em;
   min-height: 230px;
@@ -1372,7 +1370,7 @@ div.right-panel {
   top: 2em;
   right: 2em;
   margin-right: 1em;
-  z-index: 200;
+  z-index: 20;
   height: 2.5em;
   width: 70px;
   padding: 0 0.7em;
@@ -1387,7 +1385,7 @@ div.right-panel {
 #mainDiv.profile .profile-item-edit-btn:active,
 #mainDiv.profile .profile-item-edit-btn:focus {
   color: #FFF;
-  background-color: #5f676e;
+  background-color: #909698;
 }
 #mainDiv.profile .profile-item-edit-btn::before {
   content: "EDIT";
@@ -1465,7 +1463,7 @@ div.right-panel {
 }
 #createUserLink:hover {
   color: #FFF;
-  background: #5f676e;
+  background: #909698;
 }
 .profile-create-item-container {
   border-radius: 8px;
@@ -1649,7 +1647,7 @@ div.noOrg-container span {
   margin-top: 0.5em;
 }
 #userSessionReportDetailHeader a[href]:hover {
-  color: #60654f;
+  color: #909698;
 }
 #userSessionReportDetailTable caption {
   padding: 0;
@@ -1866,6 +1864,9 @@ table.profile-audit-log TH,
   border-bottom: 1px solid #E0E6E3;
   padding: 0.1em 0 1.5em 0;
 }
+.custom-container .profile-item-container {
+  padding: 1.5em 2em 2em 2em;
+}
 .custom-container h4 {
   margin-bottom: 1em;
 }
@@ -1926,8 +1927,8 @@ table.profile-audit-log TH,
   border-color: #7C959E;
 }
 .pagination > .active > a:hover {
-  background-color: #7C959E;
-  border-color: #7C959E;
+  background-color: #909698;
+  border-color: #909698;
 }
 .pagination > .active > span {
   background-color: #7C959E;
@@ -1938,8 +1939,8 @@ table.profile-audit-log TH,
   border-color: #7C959E;
 }
 .pagination > .active > span:hover {
-  background-color: #7C959E;
-  border-color: #7C959E;
+  background-color: #909698;
+  border-color: #909698;
 }
 .pagination > li > a {
   color: #333;
@@ -2015,7 +2016,7 @@ sub.pointer {
   cursor: pointer;
 }
 sub.pointer:hover {
-  color: #60654f;
+  color: #909698;
 }
 .report-custom-header {
   padding: 0.3em 0.5em;
@@ -2078,7 +2079,7 @@ sub.pointer:hover {
   font-size: 0.9em;
 }
 #consentContainer a:hover {
-  color: #60654f;
+  color: #909698;
 }
 .consent-checkbox {
   margin-left: -2px;
@@ -2095,7 +2096,7 @@ sub.pointer:hover {
   text-decoration: underline;
 }
 #profileConsentList a:hover {
-  color: #60654f;
+  color: #909698;
 }
 #profileConsentList .consentlist-header {
   background-color: #8a8e90;
@@ -2219,9 +2220,6 @@ div.timezone-warning.text-warning {
   .text-on-img p:last-child {
     margin-bottom: 0;
   }
-  #profileStudyIDContainer {
-    margin-top: -2.5em !important;
-  }
   #profileForm #bdGroup .flex {
     flex-wrap: nowrap !important;
   }
@@ -2256,11 +2254,13 @@ div.timezone-warning.text-warning {
   h5,
   label,
   legend,
-  .tnth-form .form-group > label {
-    font-size: 13px;
+  .tnth-form .form-group > label{
+    font-size: 14px;
   }
-  #createUserLink {
-    font-size: 0.9em;
+  #createUserLink,
+  .btn,
+  .btn-tnth-primary  {
+    font-size: 0.95em;
   }
   #indexNavBar {
     display: block;
@@ -2285,7 +2285,7 @@ div.timezone-warning.text-warning {
     padding: 0;
   }
   .profile-item-container {
-    padding: 2em;
+    padding: 1em;
     max-width: 100%;
   }
   .fixed-table-pagination {
