--- a/portal/templates/gil/lived_experience_base.html
+++ b/portal/templates/gil/lived_experience_base.html
@@ -1,6 +1,6 @@
 {% extends "gil/base.html" %}
 {% block footnote %}
-<aside class="aside--up">
+<aside>
      <div class="module-wrap module-wrap--background" style="background-image: url({{ url_for('static', filename='img/LE_Share_Story.jpg') }})">
         <div class="module">
           <div class="accent-heading accent-heading--white">Objective N<em>o</em>1: TrueNTH Community</div>
