--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -4449,8 +4449,7 @@ only screen and (min-resolution: 2dppx) {
         font-size: 0.9em;
         padding-left: 12px;
         padding-right: 12px;
-        margin-left: 0.5em;
-        margin-right: 0.5em;
+        margin: 0.5em 1em;
     }
 }
 
@@ -6384,8 +6383,9 @@ figure.nav-overlay {
         letter-spacing: 2px;
     }
     .module__heading {
-        font-size: 28px;
+        font-size: 1.7em;
         line-height: 40px;
+        margin: 0 0.2em;
     }
 }
 
@@ -6413,6 +6413,7 @@ figure.nav-overlay {
     .module__body {
         font-size: 22px;
         line-height: 28px;
+        margin: 1em auto;
     }
 }
 .module__form {
@@ -6773,10 +6774,52 @@ figure.nav-overlay {
     & .accent-heading:after {
         background-color: #A9B2B7;
     }
+    & .module {
+        padding: 20px 0;
+    }
+    & .module__body {
+        padding: 0 0.5em;
+    }
 }
 @media (min-width: 833px) {
     .module-wrap--story .module__body {
         padding: 0 35px 0 30px;
+    }
+}
+@media (min-width: 770px) {
+    .module-wrap--story {
+        padding-top: 20%;
+    }
+}
+@media (min-width: 900px) {
+    .module-wrap--story {
+        padding-top: 12%;
+    }
+}
+@media (min-width: 1200px) {
+    .module-wrap--story {
+        padding-top: 8%;
+    }
+}
+@media (min-width: 451px) {
+    .module-wrap--story .module__body {
+        padding: 0 1em;
+    }
+}
+@media (min-width: 992px) {
+    .module-wrap--story .module__body {
+        padding: 0;
+    }
+}
+
+@media (min-width: 992px) {
+    .module-wrap--story .module {
+        padding: 30px 0;
+    }
+}
+@media (min-width: 900px) {
+    .module-wrap--story .module:first-of-type {
+        padding-top: 240px;
     }
 }
 .story-title {
@@ -6813,6 +6856,16 @@ figure.nav-overlay {
     margin-top: -140px;
     background-position: 75% top;
     transition: background-position 150ms ease-out;
+    & .page-intro__content {
+        padding-top: 18%;
+        min-height: 380px;
+    }
+}
+@media (min-width: 900px) {
+    .page-intro--lived-experience .page-intro__content {
+        min-height: 420px;
+        padding-top: 220px;
+    }
 }
 .module-wrap--background,
 .module-wrap--background,
@@ -6851,11 +6904,22 @@ figure.nav-overlay {
 }
 .module-wrap--background__alonzo {
     background-image: url("../img/LE_Alonzo_McCann_Tablet.jpg");
-    background-position: 95%;
+    background-position: 60%;
     transition: background-position 200ms ease-in-out;
 }
-@media (min-width: 992px) {
+@media (min-width: 1100px) {
     .module-wrap--background__alonzo {
+        background-position: 50%;
+    }
+}
+@media (min-width: 1200px) {
+    .module-wrap--background__alonzo {
+        background-position: 30%;
+    }
+}
+@media (min-width: 1300px) {
+    .module-wrap--background__alonzo {
+        background-position: 30%;
         background-image: url("../img/LE_Alonzo_McCann.jpg");
     }
 }
@@ -6864,15 +6928,19 @@ figure.nav-overlay {
     background-position: 0;
     transition: background-position 200ms ease-in-out;
 }
-@media (min-width: 992px) {
-    .module-wrap--background__andrew {
-        background-image: url("../img/LE_David_Andrew_Perez.jpg");
-    }
+.module-wrap--background__andrew {
+    background-image: url("../img/LE_David_Andrew_Perez.jpg");
+    background-position: 0;
+    transition: background-position 200ms ease-in-out;
 }
 .module-wrap--background__twins {
     background-image: url("../img/LE_Hirsch_Brothers_Tablet.jpg");
-    background-position: 58%;
     transition: background-position 200ms ease-in-out;
+}
+@media (min-width: 767px) {
+    .module-wrap--background__twins {
+        background-position: 62%;
+    }
 }
 @media (min-width: 1300px) {
     .module-wrap--background__twins {
@@ -6881,9 +6949,8 @@ figure.nav-overlay {
     }
 }
 .module-wrap--background .module__head {
-    font-size: 33px;
+    font-size: 2em;
 }
-
 @media (min-width: 1600px) {
     .module-wrap--background {
         max-height: 508px;
@@ -6904,30 +6971,33 @@ figure.nav-overlay {
     }
 }
 .module-wrap--background .module__body {
-    padding: 2% 5%;
+    padding: 1% 5%;
     min-height: 100px;
-    transition: padding 150ms ease-out;
+}
+@media (min-width: 746px) {
+    .module-wrap--background .module__body {
+        padding: 1% 10%;
+    }
+}
+@media (min-width: 767px) {
+    .module-wrap--background .module__body {
+        padding: 6% 18%;
+    }
 }
 @media (min-width: 851px) {
     .module-wrap--background .module__body {
         padding: 3% 18%;
     }
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
     .module-wrap--background .module__body {
-        font-size: 1.8em;
-        line-height: 1.4em;
-    }
-}
-@media (min-width: 1100px) {
-    .module-wrap--background .module__body {
-        padding: 2% 15%;
+        padding: 2% 10%;
     }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1300px) {
     .module-wrap--background .module__body {
-        padding: 1% 11%;
+        padding: 1% 7%;
     }
 }
 
@@ -6939,8 +7009,7 @@ figure.nav-overlay {
 .module-wrap--background .module--shift__right,
 .module-wrap--background .module--shift__left {
     z-index: 2;
-    padding: 3% 1%;
-    transition: padding 150ms ease-in;
+    padding: 4.5% 1%;
 }
 
 @media (max-width: 1199px) {
@@ -6952,11 +7021,6 @@ figure.nav-overlay {
     }
 }
 @media (max-width: 851px) {
-    .module-wrap--background .module {
-        margin: 0 0.5em;
-    }
-}
-@media (max-width: 819px) {
     .module-wrap--background .module {
         margin: 0 0.5em;
     }
@@ -6974,9 +7038,10 @@ figure.nav-overlay {
     }
     img.mobile {
         display: block;
-        width: 300px;
+        width: 480px;
         max-width: 100%;
         margin: 0 auto 1.5em auto;
+        padding: 1em 10%;
     }
     .module-wrap--background {
         & .module {
@@ -6984,20 +7049,20 @@ figure.nav-overlay {
             margin: 0 auto;
         }
         & .module__heading {
-            font-size: 24px;
-            padding-left: 10px;
-            padding-right: 10px;
+            padding-left: 5%
+            padding-right: 5%;
+            padding-bottom: 1em
         }
         & .button--brown {
-            margin: 0 20px;
+            margin: 0 10%;
         }
     }
 }
 aside {
     & .module-wrap--background {
-        padding-top: 8%;
+        padding-top: 5%;
         padding-bottom: 0;
-        background-position: center;
+        background-position: 55%;
         transition: background-position 150ms ease-in;
     }
     & .module--flex {
@@ -7008,9 +7073,22 @@ aside {
         flex-wrap: wrap
     }
 }
-@media (min-width: 992px) {
+@media (min-width: 1400px) {
     aside .module-wrap--background {
-        padding-top: 6%;
+        background-position: 53%;
+    }
+}
+@media (min-width: 1300px) {
+    aside .module-wrap--background {
+        padding-top: 3%;
+    }
+}
+aside .module-wrap--background .module__head {
+    font-size: 2.2em;
+}
+@media (max-width: 767px){
+    aside .module-wrap--background .module__head {
+        font-size: 24px;
     }
 }
 .module-wrap--watch .module-wrap--inner {
