--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -130,6 +130,10 @@ $(document).ready(function(){
         targetField: $("#phone")
      },
      {
+        attachID: "altPhoneGroup",
+        targetField: $("#altPhone")
+     },
+     {
         attachID: "localeGroup",
         targetField: $("#locale")
      },
