--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
-{% from "profile_macros.html" import profileName, profileBirthDate, profileEmail, profilePhone, profileSaveBtn %}
+{% from "profile_macros.html" import profileName, profileBirthDate, profileEmail, profilePhone, profileAltPhone, profileSaveBtn %}
 {% from "initial_queries_macros.html" import consent_fields %}
 <br/>
 <style>
@@ -32,6 +32,7 @@
                         <div class="help-block with-errors" id="erroremail"></div>
                     </div>
                     {{profilePhone(False)}}
+                    {{profileAltPhone(False)}}
                     <div class="divider"></div>
                     <hr/>
                     <div class="form-group profile-section" id="userOrgs">
@@ -218,7 +219,8 @@ $(document).ready(function(){
                     if (hasValue(emailVal)) {
                         _demoArray['telecom'].push({ 'system': 'email', 'value': emailVal });
                     }
-                    _demoArray['telecom'].push({ 'system': 'phone', 'value': $.trim($('input[name=phone]').val())});
+                    _demoArray['telecom'].push({ 'system': 'phone', 'use': 'mobile', 'value': $.trim($('input[name=phone]').val())});
+                    _demoArray['telecom'].push({ 'system': 'phone', 'use': 'home', 'value': $.trim($('input[name=altPhone]').val())});
 
                      var orgIDs = $('#userOrgs input:checked').map(function(){
                         return { reference: 'api/organization/'+$(this).val() };
@@ -278,7 +280,7 @@ $(document).ready(function(){
     };
 
     function clear() {
-        ['firstname', 'lastname', 'birthday', 'birthdayDay', 'birthdayMonth', 'birthdayYear', 'date', 'year', 'email', 'phone'].forEach(function(fieldName) {
+        ['firstname', 'lastname', 'birthday', 'birthdayDay', 'birthdayMonth', 'birthdayYear', 'date', 'year', 'email', 'phone', 'altPhone'].forEach(function(fieldName) {
             var currentElement = $('#' + fieldName);
             var _tagName = currentElement.get(0) ? currentElement.get(0).tagName : '';
             switch(_tagName.toLowerCase()) {
